refactor find lemma occurences logic in SentenceServiceImpl